# LegalChess

./: .gitignore  CMakeLists.txt  README.md  SAN.txt  SANToUCI.py  UCI.txt  main.cpp
NewLegalChess/: CMakeLists.txt
NewLegalChess/inc/: Board.h  Helper.h  MoveManager.h  Zobrist.h
NewLegalChess/src/: Board.cpp  Helper.cpp  MoveManager.cpp  Zobrist.cpp
inc/: Board.h  Helper.h  LegalChess.h  MoveManager.h  Precompute.h  Zobrist.h  ZobristHash.h
src/: Board.cpp  Helper.cpp  MoveManager.cpp  Zobrist.cpp
